# apertium-quz-spa

./: .gitattributes  ACKNOWLEDGEMENTS  AUTHORS  Makefile  Makefile.am  README  apertium-quz-spa.post-spa.dix  apertium-quz-spa.quz-spa.dix  apertium-quz-spa.quz-spa.lrx  apertium-quz-spa.quz-spa.rlx  apertium-quz-spa.quz-spa.t1x  apertium-quz-spa.quz-spa.t2x  apertium-quz-spa.quz-spa.t3x  apertium-quz-spa.quz.lexc  apertium-quz-spa.quz.twol  apertium-quz-spa.spa-quz.lrx  apertium-quz-spa.spa.dix  configure.ac  cuento-quz.txt  modes.xml
dev/: apertium-quz-spa.quz.lexc-OLD  cuento.quz-var.txt  cuento.quz.txt  inconsistency.sh  np-top.xml  ortografía.txt  udhr.quz-original.txt  udhr.quz.txt
test/: quz-spa-chunker-expected.txt  quz-spa-input.txt  quz-spa-interchunk-expected.txt  quz-spa-lex-expected.txt  quz-spa-morph-expected.txt  quz-spa-postchunk-expected.txt  quz-spa-postgen-expected.txt  quz-spa-pretransfer-expected.txt  spa-quz-chunker-expected.txt  spa-quz-generator-expected.txt  spa-quz-input.txt  spa-quz-lex-expected.txt  spa-quz-morph-expected.txt  spa-quz-postchunk-expected.txt  spa-quz-pretransfer-expected.txt  tests.json
